# over_the_movie

./: 404.html  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  noop.txt
.github/workflows/: ci.yml
ER_diagram/: index.html
Use_case_diagram/: index.html
csv/input/: movies.csv  users.csv
csv/output/: movie_cleaned.csv
docs/: ER_diagram.md  Use_case_diagram.md  docstrings.md  index.md
docstrings/: index.html
search/: search_index.json
src/python/: csv_utils.py  db_connection.py  movie.py  process_movie_csv.py
src/sql/: create_tables.sql  demo.sql
